# qt-wgpu

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  pixi.toml
cmake/: functions.cmake
dependencies/: CMakeLists.txt
source/: MainWindow.cpp  MainWindow.h  MainWindow.ui  QWGPUWidget.cpp  QWGPUWidget.h  create_surface_descriptor.mm  main.cpp  wgpu_context.cc  wgpu_context.hpp  wgpu_error_scope.cc  wgpu_error_scope.hpp  wgpu_fmt.hpp  wgpu_setup.cc  wgpu_setup.hpp  wgpu_textures.cc  wgpu_textures.hpp
